- Ensure even harder that MetricPusher flushes the final state before stopping (#383 and #384)
- Simplify DotNetStats built-in collector code for ease of readability and more best practices (#365, #364)
- Slightly improve Counter performance under concurrent load.
- Reduce memory allocations performed during ASP.NET Core HTTP request tracking.
* 7.1.0
- Added back .NET Standard 2.0 support as some customers had a hard dependency on .NET Standard 2.0 (despite not being a documented feature even earlier).
- Added (Observable)UpDownCounter support to MeterAdapter (.NET 7 specific feature).
* 7.0.0
- .NET Core specific functionality now targeting .NET 6.0 or greater (all previous versions will be end of life by December 2022).
- Relaxed the API restriction that forbade you to create multiple metrics with the same name but different label names. While this is a Prometheus anti-pattern, it is a standard pattern in other metrics technologies and we will allow it in the name of interoperability.
- Added IMetricFactory.WithLabels() to define static labels per-factory and reduce the effort needed by users when defining static labels in specific scopes.
- Added automatic metric expiration feature, to remove timeseries when they are no longer used after a while. This improves interoperability with other metrics technologies such as .NET Meters.
- (Breaking change) Rewrite of the MeterAdapter functionality to bridge .NET 6 metrics to Prometheus. API remains equivalent, though options class changed. Output format (what metrics are published) is completely different. Now it translates metric names (instead of putting them in labels) and preserves tags (labels) provided via the .NET Meters API. Added sample project to demonstrate functionality. Ref #359